--- a/taskqa/index.html
+++ b/taskqa/index.html
@@ -27,13 +27,7 @@
   <body>
     <table>
       <tr><td>
-<br><br>Январь, сессия. Студенты сдают экзамены.
-<br>За каждый экзамен получают баллы.
-<br>Кол-во человек в каждый день произвольно.
-<br>В выходные дни экзаменов нет.
-<br><br>
-В базу данных заносятся сведения о сданных экзаменах и их результатах.
-<br>Нужно протестировать приложение, которое обрабатывает данные, как студенты сдавали экзамены.
+<br><br>Нужно протестировать приложение, которое обрабатывает данные о книгах, которые есть в наличии в интернет-магазине.
 <br>Сервис получает на вход фамилию студента, делает запрос в БД, считает и возвращает кол-во баллов, которое набрал студент.
 <br>Но это не просто сумма, а с коэффициентом.
 <br>Баллы на второй день – х2, третий день – х3, и т.д. 
@@ -47,10 +41,10 @@
        
 <h3>Задание по SQL:</h3>
  
- <img src="https://raw.githubusercontent.com/JuliaKuznetsovaQA/SQL_Practice/main/img/task.JPG" alt="drawing" style="width:80%; text-align:center"/>
+ <img src="https://github.com/testingangie/testingangie.github.io/blob/main/taskqa/img/books.jpg?raw=true" alt="drawing" style="width:80%; text-align:center"/>
  <br><br>
-<br>1. Вывести, какие экзамены сдавал студент Иванов.
-<br>2. Вывести, какие студенты сдавали математику.
+<br>1. Вывести, какие книги Булгакова есть в магазине.
+<br>2. Вывести название, жанр и цену тех книг, количество которых больше 8, в отсортированном по убыванию цены виде.
 <br>3. Вывести, какое количество баллов набрал студент Иванов (с учетом коэффициента).
 <br>4. Вывести имя студента, набравшего наибольшее число баллов (с учетом коэффициента).
 </details>
