--- a/taskqa/index.html
+++ b/taskqa/index.html
@@ -27,10 +27,9 @@
   <body>
     <table>
       <tr><td>
-<br><br>Нужно протестировать приложение, которое обрабатывает данные о книгах, которые есть в наличии в интернет-магазине.
-<br>Сервис получает на вход фамилию студента, делает запрос в БД, считает и возвращает кол-во баллов, которое набрал студент.
-<br>Но это не просто сумма, а с коэффициентом.
-<br>Баллы на второй день – х2, третий день – х3, и т.д. 
+<br><br>Нужно протестировать приложение, которое обрабатывает данные о книгах, которые есть в наличии в книжном магазине.
+<br>У приложения нет UI (User Interface), приложение получает на вход запрос по REST и так же возвращает ответ.
+<br> 
  <br><br>
 Продумать тест-план.
 <br>Какие виды тестирования будете использовать?
@@ -45,8 +44,8 @@
  <br><br>
 <br>1. Вывести, какие книги Булгакова есть в магазине.
 <br>2. Вывести название, жанр и цену тех книг, количество которых больше 8, в отсортированном по убыванию цены виде.
-<br>3. Вывести, какое количество баллов набрал студент Иванов (с учетом коэффициента).
-<br>4. Вывести имя студента, набравшего наибольшее число баллов (с учетом коэффициента).
+<br>3. Вывести название всех книг каждого автора, если книг некоторых авторов в данный момент нет на складе – вместо названия книги указать Null.
+
 </details>
 <br><br><br>
       </td></tr>
