--- a/taskqa/index.html
+++ b/taskqa/index.html
@@ -40,7 +40,7 @@
        
 <h3>Задание по SQL:</h3>
  
- <img src="https://github.com/testingangie/testingangie.github.io/blob/main/taskqa/img/books.jpg?raw=true" alt="drawing" style="width:600 px; text-align:center"/>
+ <img src="https://github.com/testingangie/testingangie.github.io/blob/main/taskqa/img/books_s.jpg?raw=true" alt="drawing" style="width:80%; text-align:center"/>
  <br><br>
 <br>1. Вывести, какие книги Булгакова есть в магазине.
 <br>2. Вывести название, жанр и цену тех книг, количество которых больше 8, в отсортированном по убыванию цены виде.
